--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,25 @@
 <ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Home</ion-title>
-  </ion-navbar>
-</ion-header>
-
-<ion-content padding>
-  <h3>Ionic Menu Starter</h3>
-
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
-</ion-content>
+    <ion-navbar>
+      <button ion-button menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
+      <ion-title>Kwad Configurator</ion-title>
+    </ion-navbar>
+  </ion-header>
+  
+  
+  <ion-content padding>
+  
+    <h3>Welcome to the Kwad Configurator App !</h3>
+  
+    <p>
+      Here you can chose your favorite parts and create your dream configurations.
+    </p>
+    <p>
+      Are you ready ?
+    </p>
+    <p>
+      <button ion-button color="primary" menuToggle>Let's go</button>
+    </p>
+  
+  </ion-content>
