ajout du clic add config rapide

--- a/src/pages/config/config.html
+++ b/src/pages/config/config.html
@@ -9,6 +9,7 @@
 
 <ion-content padding>
     <h3>Here is your configuration :</h3>
-    <h4>Motor chosen : {{selectedMotorBrand}} - {{selectedMotorModel}} <button ion-button color="danger" (click)="deleteMotor()">Delete</button></h4> 
-    <button ion-button block color="primary" (click)="sendMail()">Send Mail</button>
+    <h4><U>Motor :</U> {{selectedMotorBrand}} - {{selectedMotorModel}} <button ion-button color="danger" (click)="deleteMotor()">Delete</button></h4> 
+    <h4><U>Frame :</U> {{selectedMotorBrand}} - {{selectedMotorModel}} <button ion-button color="danger" (click)="deleteMotor()">Delete</button></h4> 
+    <button ion-button block color="primary" (click)="sendMail()">Send By Mail</button>
 </ion-content>
