--- a/src/pages/config/config.html
+++ b/src/pages/config/config.html
@@ -11,5 +11,6 @@
     <h3>Here is your configuration :</h3>
     <h4><U>Motor :</U> {{selectedMotorBrand}} - {{selectedMotorModel}} <button ion-button color="danger" (click)="deleteMotor()">Delete</button></h4> 
     <h4><U>Frame :</U> {{selectedFrameBrand}} - {{selectedFrameModel}} <button ion-button color="danger" (click)="deleteFrame()">Delete</button></h4> 
+    <button ion-button block color="orange" (click)="refreshPage()">Refresh page</button>
     <button ion-button block color="primary" (click)="sendMail()">Send By Mail</button>
 </ion-content>
