ajout image dans config

--- a/src/pages/config/config.html
+++ b/src/pages/config/config.html
@@ -9,7 +9,18 @@
 
 <ion-content padding>
     <h3>Here is your configuration :</h3>
-    <h4><U>Motor :</U> {{selectedMotorBrand}} - {{selectedMotorModel}} <button ion-button color="danger" (click)="deleteMotor()">Delete</button></h4> 
+    <!-- <h4><U>Motor :</U> {{selectedMotorBrand}} - {{selectedMotorModel}} <button ion-button color="danger" (click)="deleteMotor()">Delete</button></h4>  -->
+    
+    <h4><U>Motor :</U> 
+      <tr>
+        <td><img src="{{selectedMotorImage}}" class="imageMiniature"></td>
+
+        <td><p>{{selectedMotorBrand}}</p>
+          <p>{{selectedMotorModel}}</p> </td>
+          <td><button ion-button color="danger" (click)="deleteMotor()">Delete</button></td>
+      <tr>
+    </h4>
+    
     <h4><U>Frame :</U> {{selectedFrameBrand}} - {{selectedFrameModel}} <button ion-button color="danger" (click)="deleteFrame()">Delete</button></h4> 
     <button ion-button block color="orange" (click)="refreshPage()">Refresh page</button>
     <button ion-button block color="primary" (click)="sendMail()">Send By Mail</button>
