--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,6 +12,8 @@
   
     <h3>Welcome to the Kwad Configurator App !</h3>
   
+    <a href="#"><img ion-right src="assets/imgs/logoDrone.png" class="imageGrande" /></a>
+
     <p>
       Here you can chose your favorite parts and create your dream configurations.
     </p>
@@ -21,5 +23,7 @@
     <p>
       <button ion-button color="primary" (click)="toParts()" class="buttonCentre">Let's go</button>
     </p>
+
+  
   
   </ion-content>
